# cross_platform_signal

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  README.md  ci_log.txt  conanfile.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
ct_core/include/: FilterBank.h  Reconstructor.h  Types.h
ct_core/src/: FilterBank.cpp  Reconstructor.cpp
ct_viewer/: CtImageProvider.cpp  CtImageProvider.h  ReconstructionController.cpp  ReconstructionController.h  main.cpp
ct_viewer/qml/: FilterControls.qml  main.qml
dicom_pipeline/: CMakeLists.txt
dicom_pipeline/docker/: Dockerfile
dicom_pipeline/include/: DicomAnonymizer.h  DicomReader.h  MetricsServer.h  ProcessingLogger.h  Types.h
dicom_pipeline/src/: DicomAnonymizer.cpp  DicomReader.cpp  MetricsServer.cpp  ProcessingLogger.cpp  main.cpp
dicom_pipeline/tests/: test_dicom_anonymizer.cpp  test_dicom_reader.cpp  test_metrics_server.cpp  test_processing_logger.cpp
dicom_pipeline/tests/fixtures/: create_test_dicom.py  sample_64x64.dcm
dicom_pipeline/tests_python/: conftest.py  test_metrics_endpoint.py
docs/: ct-reconstruction.md  dicom-pipeline.md  electrostatic-monitor.md  optical-positioning.md  optical-sorting.md  realtime-audio-engine.md  signal-analyzer.md
edge_sorting_pipeline/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
edge_sorting_pipeline/dashboard/backend/: main.py
edge_sorting_pipeline/dashboard/backend/tests/: conftest.py  test_backend.py
edge_sorting_pipeline/dashboard/frontend/: index.html  main.ts  style.css  tsconfig.json
edge_sorting_pipeline/include/control/: MachineController.h  SortingQueue.h
edge_sorting_pipeline/include/inference/: CameraSimulator.h  IInferenceEngine.h  MockEngine.h  TFLiteEngine.h
edge_sorting_pipeline/include/postproc/: BoundingBox.h  NMS.h
edge_sorting_pipeline/include/telemetry/: TelemetrySender.h
edge_sorting_pipeline/src/: main.cpp
edge_sorting_pipeline/src/control/: MachineController.cpp
edge_sorting_pipeline/src/inference/: CameraSimulator.cpp  TFLiteEngine.cpp
edge_sorting_pipeline/src/postproc/: NMS.cpp
edge_sorting_pipeline/src/telemetry/: TelemetrySender.cpp
edge_sorting_pipeline/tests/: test_controller.cpp  test_nms.cpp  test_pipeline.cpp  test_queue.cpp  test_telemetry.cpp
electrostatic_monitor/qml/: DecayChart.qml  VoltageGauge.qml  main.qml
electrostatic_monitor/src/: AdcSimulator.cpp  AdcSimulator.h  ElectrostaticEngine.cpp  ElectrostaticEngine.h  MonitorContext.cpp  MonitorContext.h  TelemetryClient.cpp  TelemetryClient.h  main.cpp
k8s/: configmap.yaml  deployment.yaml  service.yaml
realtime_audio_engine/: CMakeLists.txt
realtime_audio_engine/docs/: DB-SCHEMA.md  FILTER-MATH.md  THREADING.md
realtime_audio_engine/include/: AudioConfig.h  AudioRingBuffer.h  IirFilter.h
realtime_audio_engine/qml/: RotaryKnob.qml  WaveformView.qml  main.qml
realtime_audio_engine/src/: AudioEngine.cpp  AudioEngine.h  AudioEngineWrapper.cpp  AudioEngineWrapper.h  PresetModel.cpp  PresetModel.h  PresetRepository.cpp  PresetRepository.h  main.cpp
realtime_audio_engine/tests/: test_audio_core.cpp  test_audio_qt.cpp
src/: ButterworthFilter.cpp  ButterworthFilter.h  CsvFileSource.h  FftAnalyser.cpp  FftAnalyser.h  ISignalFilter.h  ISignalSource.h  MovingAverageFilter.h  SignalProcessor.cpp  SignalProcessor.h  SqliteLogger.cpp  SqliteLogger.h  SyntheticSource.h  main.cpp
src/hal/: IDevice.h  LinearAxis.cpp  LinearAxis.h  PressureSensor.cpp  PressureSensor.h  SafetyInterlock.cpp  SafetyInterlock.h  SpindleMotor.cpp  SpindleMotor.h
src/optical/: LensSurface.h  PositioningFsm.cpp  PositioningFsm.h  TelemetryLogger.cpp  TelemetryLogger.h  ToolpathGenerator.cpp  ToolpathGenerator.h
tests/: test_butterworth.cpp  test_ct.cpp  test_electrostatic.cpp  test_fft.cpp  test_hal.cpp  test_positioning_fsm.cpp  test_sources.cpp  test_telemetry.py  test_toolpath.cpp
tools/: generate_signal.py  mock_server.py  test_tools.py
vehicle_telemetry_qt/: CMakeLists.txt  Jenkinsfile  README.md
vehicle_telemetry_qt/include/: EmaFilter.h  SensorSimulator.h  TelemetryHttpServer.h  TelemetryModel.h
vehicle_telemetry_qt/qml/: GaugeCard.qml  TelemetryChart.qml  main.qml
vehicle_telemetry_qt/src/: SensorSimulator.cpp  TelemetryHttpServer.cpp  TelemetryModel.cpp  main.cpp  main_noqt.cpp
vehicle_telemetry_qt/tests/: test_ema.cpp
vehicle_telemetry_qt/tests_python/: test_http_server.py
