[project]
name = "cross-platform-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.5",
    "scipy>=1.17.1",
    "pydicom>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tools"]
